# LearnAndReduce

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_all.sh  get_dep.sh
app/: generate_full_graph_training_data.cpp  generate_training_data.cpp  kernelization.cpp  metis_to_cosmo.cpp  reduce.cpp  reduce_and_chils.cpp  reduce_and_lift.cpp
experiments/: extract_result.sh  simple_reduction_config.sh  single_reductions.sh
experiments/data_scripts/: group_data.py
lib/: definitions.h
lib/algorithms/: push_relabel.h
lib/basics/: cout_handler.cpp  cout_handler.h  graph_operations.h  solution_check.h
lib/config/: config.h  configuration_mis.h  configuration_reduction.h  mis_log.cpp  mis_log.h  parse_parameters.h  reduction_config.h  reduction_log.cpp  reduction_log.h
lib/data_structure/: csr_graph.c  csr_graph.h  dynamic_graph.h  fast_set.h  graph_access.h  mis_permutation.cpp  mis_permutation.h  operation_log.cpp  sized_vector.h
lib/io/: graph_io.cpp  graph_io.h
lib/tools/: log.cpp  log.h  random_functions.h
models/: critical_set.lr_gcn  cut_vertex.lr_gcn  decreasing_struction.gnn  exclude.gnn  generalized_fold.lr_gcn  heavy_set.gnn  heavy_set.lr_gcn  heavy_set3.gnn  heavy_set3.lr_gcn  single_edge.gnn  unconfined.lr_gcn  unconfined_csr.lr_gcn
models/old/: clique.gnn  domination.gnn  extended_single_edge.gnn  heavy_set.gnn  heavy_vertex.gnn  include.gnn  twin.gnn
solver/branch_reduce/: CMakeLists.txt
solver/branch_reduce/app/: .generate_training_data.cpp.swp  branch_reduce.cpp  cyclic_blow_up_convergency.cpp  generate_full_graph_training_data.cpp  generate_training_data.cpp  kernelization.cpp  struction_checker.cpp
solver/branch_reduce/kernel/: LRConv.cpp  LRConv.h  bound_reduction.cpp  bound_reduction.h  extended_struction.cpp  extended_struction.h  general_reduction.cpp  general_reduction.h  high_degree_reduction.h  key_functions.cpp  mwis_finder.cpp  mwis_finder.h  original_struction.cpp  original_struction.h  reductions.cpp  reductions.h  vertex_marker.h
solver/branch_reduce/kernel/csr_reductions/: unconfined_csr_reduction.cpp  unconfined_csr_reduction.h
solver/branch_reduce/kernel/csr_reductions/include/: graph.h
solver/branch_reduce/kernel/csr_reductions/src/: graph.c  reductions.c
solver/branch_reduce/kernel/expensive_reduction_rules/: bound_reduction.cpp  bound_reduction.h  critical_set_reduction.cpp  critical_set_reduction.h  cut_vertex_reduction.cpp  cut_vertex_reduction.h  generalized_fold_reduction.cpp  generalized_fold_reduction.h  heavy_set3_reduction.cpp  heavy_set3_reduction.h  heavy_set_reduction.cpp  heavy_set_reduction.h  high_degree_reduction.cpp  high_degree_reduction.h
solver/branch_reduce/kernel/heuristic_reduction_rules/: heuristic_exclude_reduction.cpp  heuristic_exclude_reduction.h  heuristic_include_reduction.cpp  heuristic_include_reduction.h
solver/branch_reduce/kernel/simple_reduction_rules/: clique_neighborhood_fast_reduction.cpp  clique_neighborhood_fast_reduction.h  clique_neighborhood_reduction.cpp  clique_neighborhood_reduction.h  clique_reduction.cpp  clique_reduction.h  domination_reduction.cpp  domination_reduction.h  extended_domination_reduction.cpp  extended_domination_reduction.h  extended_domination_reverse_reduction.cpp  extended_domination_reverse_reduction.h  extended_single_edge_reduction.cpp  extended_single_edge_reduction.h  extended_twin_reduction.cpp  extended_twin_reduction.h  fold1_reduction.cpp  fold1_reduction.h  fold2_reduction.cpp  fold2_reduction.h  funnel_fold_reduction.cpp  funnel_fold_reduction.h  funnel_reduction.cpp  funnel_reduction.h  neighborhood_reduction.cpp  neighborhood_reduction.h  single_edge_reduction.cpp  single_edge_reduction.h  twin_reduction.cpp  twin_reduction.h
solver/branch_reduce/kernel/struction_reduction_rules/: extended_struction.cpp  extended_struction.h  key_functions.h  mwis_finder.h  original_struction.cpp  original_struction.h  struction_reductions.cpp  struction_reductions.h
solver/branch_reduce/lib/: bounds.cpp  branch_and_reduce_algorithm.cpp  branch_and_reduce_algorithm.h
solver/branch_reduce/lib/bounds/: partition_cover.cpp  partition_cover.h
solver/branch_reduce/tools/: struction_log.cpp  struction_log.h
solver/hils/: Solution.cpp  Solution.h  hils.h
solver/ils/: ils.cpp  ils.h  local_search.cpp  local_search.h
solver/initial/: greedy_mis.cpp  greedy_mwis.cpp  greedy_vertex.cpp  greedy_weighted_vertex.cpp  initial_mis.h  random_mis.cpp
solver/tiny_solver/: tiny_solver.c  tiny_solver.h
training_data/: instances.txt  lr.c  training-semi.py  training.ipynb  training.py  training_new.py  unconfined_csr.lr_gcn
training_data/graph/: mesh_ecat-uniformseed1_training_data_0.graph  mesh_ecat-uniformseed1_training_data_1.graph  mesh_ecat-uniformseed1_training_data_10.graph  mesh_ecat-uniformseed1_training_data_11.graph  mesh_ecat-uniformseed1_training_data_12.graph  mesh_ecat-uniformseed1_training_data_13.graph  mesh_ecat-uniformseed1_training_data_14.graph  mesh_ecat-uniformseed1_training_data_15.graph  mesh_ecat-uniformseed1_training_data_16.graph  mesh_ecat-uniformseed1_training_data_17.graph  mesh_ecat-uniformseed1_training_data_18.graph  mesh_ecat-uniformseed1_training_data_19.graph  mesh_ecat-uniformseed1_training_data_2.graph  mesh_ecat-uniformseed1_training_data_3.graph  mesh_ecat-uniformseed1_training_data_4.graph  mesh_ecat-uniformseed1_training_data_5.graph  mesh_ecat-uniformseed1_training_data_6.graph  mesh_ecat-uniformseed1_training_data_7.graph  mesh_ecat-uniformseed1_training_data_8.graph  mesh_ecat-uniformseed1_training_data_9.graph  snap_com-amazonseed1_training_data_0.graph  snap_com-amazonseed1_training_data_1.graph  snap_com-amazonseed1_training_data_10.graph  snap_com-amazonseed1_training_data_11.graph  snap_com-amazonseed1_training_data_12.graph  snap_com-amazonseed1_training_data_13.graph  snap_com-amazonseed1_training_data_14.graph  snap_com-amazonseed1_training_data_15.graph  snap_com-amazonseed1_training_data_16.graph  snap_com-amazonseed1_training_data_17.graph  snap_com-amazonseed1_training_data_18.graph  (+9 more)
(+372 files in other folders)
